syntax = "proto3";

package go.micro.srv.todos;

service Todos {
    //    rpc Call (Request) returns (Response) {
    //    }
    //    rpc Stream (StreamingRequest) returns (stream StreamingResponse) {
    //    }
    //    rpc PingPong (stream Ping) returns (stream Pong) {
    //    }

    rpc Add (AddReq) returns (AddResp) {
    }
    rpc Del (DelReq) returns (DelResp) {
    }
    rpc Edit (EditReq) returns (EditResp) {
    }
    rpc List (ListReq) returns (ListResp) {
    }
    rpc Detail (DetailReq) returns (DetailResp) {
    }
}

message Message {
    string say = 1;
}
//
//message Request {
//    string name = 1;
//}
//
//message Response {
//    string msg = 1;
//}
//
//message StreamingRequest {
//    int64 count = 1;
//}
//
//message StreamingResponse {
//    int64 count = 1;
//}
//
//message Ping {
//    int64 stroke = 1;
//}
//
//message Pong {
//    int64 stroke = 1;
//}

message Todo {
    string id = 1;
    string title = 2;
    string content = 3;
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message AddReq {
    string title = 1;
    string content = 2;
}

message AddResp {
    bool success = 1;
    Error error = 2;
}

message DelReq {
    string id = 1;
}

message DelResp {
    bool success = 1;
    Error error = 2;
}


message EditReq {
    string id = 1;
    string title = 2;
    string content = 3;
}

message EditResp {
    bool success = 1;
    Error error = 2;
}

message ListReq {
}

message ListResp {
    bool success = 1;
    Error error = 2;
    repeated Todo todos = 3;
}

message DetailReq {
    string id = 1;
}

message DetailResp {
    bool success = 1;
    Error error = 2;
    Todo todo = 3;
}